--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@angular/router": "^17.1.2",
     "@apollo/client": "^3.8.8",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
-    "@capacitor/android": "^6.0.0",
+    "@capacitor/android": "^6.1.0",
     "@capacitor/angular": "^2.0.3",
-    "@capacitor/core": "^6.0.0",
-    "@capacitor/ios": "^6.0.0",
+    "@capacitor/camera": "^6.1.0",
+    "@capacitor/core": "^6.1.0",
+    "@capacitor/ios": "^6.1.0",
     "@ngrx/effects": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@ngrx/store-devtools": "^17.0.1",
